[package]
name = "tonic_prometheus_layer"
version = "0.1.4"
edition = "2021"
homepage = "https://github.com/blkmlk/tonic-prometheus-layer"
license = "MIT"
description = "Tonic-compatible Tower Layer for Prometheus Metrics"
keywords = ["tonic", "prometheus", "layer", "middleware", "metrics"]
categories = ["web-programming", "network-programming", "asynchronous", "development-tools::profiling"]
repository = "https://github.com/blkmlk/tonic-prometheus-layer"
readme = "README.md"

[dependencies]
tonic = "0.11.0"
tower = "0.4.13"
log = "0.4.21"
pin-project = "1.1.5"
once_cell = "1.19.0"
prometheus = "0.13.4"
thiserror = "1.0.61"